# sheetreader

./: .env-dist  .gitignore  .pylintrc  Makefile  README.md  config.example.py  config.py  config.py-dist  pyproject.toml
.github/workflows/: python-app.yml
sheetreader/: Logbook.py  Sheet.py  logbook.py  readsheet.py
templates/: entry_v1.md  entry_v2.md
tests/: conftest.py  test_sheet.py
tests/fixtures/: entry_1366.md
